Minor: Neuter language strings to avoid branding + neuter logo alt text

--- a/src/CoreBundle/Resources/views/Exception/undefined_url.html.twig
+++ b/src/CoreBundle/Resources/views/Exception/undefined_url.html.twig
@@ -10,7 +10,7 @@
         {% if logoUrl %}
             <img
                     src="{{ logoUrl }}"
-                    alt="Chamilo Logo"
+                    alt="Logo"
                     class="mx-auto h-20 mb-6"
             />
         {% endif %}
@@ -22,7 +22,7 @@
             </p>
 
             <p style="font-size: 1.2rem;" class="mb-4">
-                {{ 'The address "%host%" is not configured in this Chamilo instance.'|trans({'%host%': host}) }}
+                {{ 'The address "%host%" is not configured in this portal instance.'|trans({'%host%': host}) }}
             </p>
 
             <p style="font-size: 1rem;" class="mb-6">
