Settings: Format JSON templates in modal - refs #6427

--- a/src/CoreBundle/Resources/views/Admin/Settings/default.html.twig
+++ b/src/CoreBundle/Resources/views/Admin/Settings/default.html.twig
@@ -117,7 +117,12 @@
                 if (data.json_example) {
                   document.getElementById('jsonTemplateModalLabel').innerText = data.name || '{{ "JSON Template"|trans }}';
                   document.getElementById('jsonTemplateDescription').innerText = data.description || '';
-                  document.getElementById('jsonTemplateContent').innerText = data.json_example;
+                  try {
+                    const jsonObject = JSON.parse(data.json_example);
+                    document.getElementById('jsonTemplateContent').innerText = JSON.stringify(jsonObject, null, 2);
+                  } catch (e) {
+                    document.getElementById('jsonTemplateContent').innerText = data.json_example;
+                  }
 
                   // Show overlay + modal
                   document.getElementById('jsonTemplateOverlay').classList.remove('hidden');
