User: Add password rotation feature - refs #6460

--- a/src/CoreBundle/Resources/views/Account/change_password.html.twig
+++ b/src/CoreBundle/Resources/views/Account/change_password.html.twig
@@ -49,11 +49,13 @@
                 {{ form_errors(form.confirmPassword) }}
             </div>
 
-            <div class="mb-4">
-                {{ form_label(form.enable2FA) }}
-                {{ form_widget(form.enable2FA, {'attr': {'class': 'form-checkbox'}}) }}
-                {{ form_errors(form.enable2FA) }}
-            </div>
+            {% if form.enable2FA is defined %}
+                <div class="mb-4">
+                    {{ form_label(form.enable2FA) }}
+                    {{ form_widget(form.enable2FA, {'attr': {'class': 'form-checkbox'}}) }}
+                    {{ form_errors(form.enable2FA) }}
+                </div>
+            {% endif %}
 
             <div class="flex items-center justify-center">
                 <input type="hidden" name="_token" value="{{ csrf_token('change_password') }}">
