--- a/src/CoreBundle/Resources/views/AccessUrl/remove_users.html.twig
+++ b/src/CoreBundle/Resources/views/AccessUrl/remove_users.html.twig
@@ -1,6 +1,8 @@
 {% extends "@ChamiloCore/Layout/layout_one_col.html.twig" %}
 
 {% block content %}
+    {% include "@ChamiloCore/AccessUrl/_breadcrumb_users_to_url.twig" %}
+
     <div class="mb-6">
         <a href="{{ url('legacy_main', { 'name' : 'admin/access_url_edit_users_to_url.php' }) }}"
            class="inline-flex items-center gap-2 text-sm text-primary hover:underline">
