Internal: PWA: Fix issue loading manifest.json from local directory rather than web root

--- a/src/CoreBundle/Resources/views/Layout/head.html.twig
+++ b/src/CoreBundle/Resources/views/Layout/head.html.twig
@@ -61,5 +61,5 @@
         {% endblock %}
     {% endblock %}
 
-    <link rel="manifest" href="{{ asset('manifest.json') }}">
+    <link rel="manifest" href="/manifest.json">
 </head>
