Learnpath: Improve document tree UI and file upload UX - refs #5957

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -860,7 +860,54 @@ img.course-tool__icon {
   @apply absolute inset-0 flex items-center justify-center bg-white bg-opacity-95 backdrop-blur-sm;
 }
 
-//@import "~jquery-ui-timepicker-addon/dist/jquery-ui-timepicker-addon.css";
+#form_upload {
+  #files {
+    @apply bg-white divide-y divide-gray-20 rounded-lg shadow p-4 overflow-hidden;
+  }
+
+  #files > a.panel-image {
+    @apply block no-underline;
+  }
+
+  #files .row {
+    @apply flex items-center justify-between py-2 px-3;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #files .col-sm-5 {
+    @apply flex-1 text-gray-90 font-medium truncate;
+    width: auto !important;
+  }
+  #files .col-sm-3 {
+    @apply w-auto flex-shrink-0 ml-4;
+  }
+
+  .alert {
+    @apply text-sm px-2 py-1 rounded;
+  }
+  .alert-success {
+    @apply bg-success text-success-button-text;
+  }
+  .alert-danger {
+    @apply bg-danger text-danger-button-text;
+  }
+
+  #progress {
+    @apply h-2 bg-gray-20 rounded overflow-hidden mt-4;
+  }
+  #progress .progress-bar {
+    @apply block h-full bg-primary transition-all duration-150 ease-in-out max-w-full;
+  }
+
+  #dropzone {
+    @apply border-2 border-dashed border-gray-20 rounded-lg py-4 text-center text-gray-90 cursor-pointer transition-colors duration-150;
+  }
+  #dropzone:hover {
+    @apply bg-gray-5;
+  }
+}
+
 @import "~@fancyapps/fancybox/dist/jquery.fancybox.css";
 @import "~timepicker/jquery.timepicker.min.css";
 @import "~qtip2/dist/jquery.qtip.min.css";
