--- a/public/main/template/default/skill/student_report.html.twig
+++ b/public/main/template/default/skill/student_report.html.twig
@@ -23,7 +23,7 @@
             {% for row in rows %}
                 <tr>
                     <td>{{ row.skill_badge }}</td>
-                    <td>{{ row.skill_name }}</td>
+                    <td>{{ row.skill_title }}</td>
                     <td>{{ row.achieved_at }}</td>
                     {% if row.course_name %}
                         <td>
