--- a/src/CoreBundle/Resources/views/Mailer/Legacy/content_registration_platform_to_admin.html.twig
+++ b/src/CoreBundle/Resources/views/Mailer/Legacy/content_registration_platform_to_admin.html.twig
@@ -1,27 +1,15 @@
 {% autoescape false %}
-    <p>
-        {{ 'User %s with language %s registered to the site'
-        |trans({}, 'messages', locale)
-        |format(complete_name, user_language)
-        }}
-    </p>
-    <p>
-        {{ 'His profile is'
-        |trans({}, 'messages', locale)
-        }}
-    </p>
+    <p>{{ 'User %s with language %s registered to the site'|trans|format(complete_name, user_language) }}</p>
+    <p>{{ 'His profile is'|trans }}</p>
+
     <div class="row">
         <div class="col-xs-12 col-md-12">
             <div class="form-horizontal">
-                {{ form }}
+                {{ form|raw }}
             </div>
         </div>
     </div>
-    <p>
-        {{ 'You can assign a tutor in this link %s'
-        |trans({}, 'messages', locale)
-        |format(link)
-        }}
-    </p>
+
+    <p>{{ 'You can assign a tutor in this link %s'|trans|format(link) }}</p>
     {% include '@ChamiloCore/Mailer/Legacy/_admin_signature_footer.html.twig' %}
 {% endautoescape %}
