--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -908,6 +908,10 @@ img.course-tool__icon {
   }
 }
 
+.ghosting { opacity: .6; }
+.chosen   { outline: 2px solid #ddd; }
+.dragging { outline: 2px solid var(--support-5, #f60); }
+
 @import "~@fancyapps/fancybox/dist/jquery.fancybox.css";
 @import "~timepicker/jquery.timepicker.min.css";
 @import "~qtip2/dist/jquery.qtip.min.css";
