Language: Use 'E-mail' rather than 'e-mail' everywhere to try and avoid confusion

--- a/public/main/template/default/mail/new_user_mail_to_admin_approval.html.twig
+++ b/public/main/template/default/mail/new_user_mail_to_admin_approval.html.twig
@@ -8,7 +8,7 @@
         <li>{{ 'Last name' }}: {{ user.getLastName() }}</li>
         <li>{{ 'First name' }}: {{ user.getFirstName() }}</li>
     {% endif %}
-    <li>{{ 'e-mail'|get_lang }}: {{ user.getEmail() }}</li>
+    <li>{{ 'E-mail'|get_lang }}: {{ user.getEmail() }}</li>
     <li>{{ 'Status'|get_lang }}: {{ user.getStatus() }}</li>
 </ul>
 <p>{{ 'Manage user'|get_lang }}: <a href="{{ manageUrl }}">{{ manageUrl }}</a></p>
